#17-desgin: navigation bar와 footer가 제대로 동작하도록 URL 경로 명확히 지정하고, home페이지의 css 수정

--- a/labweb/templates/labweb/base.html
+++ b/labweb/templates/labweb/base.html
@@ -152,22 +152,22 @@
                                     <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Research</a>
                                         <div class="dropdown-menu">
-                                            <a class="dropdown-item" href="/projects/">Project</a>
+                                            <a class="dropdown-item" href="/hw/projects/">Project</a>
                                         </div>
                                     </li>
                                     <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Publication</a>
                                         <div class="dropdown-menu">
-                                            <a class="dropdown-item" href="/publication/journal">Journal</a>
-                                            <a class="dropdown-item" href="/publication/conference">Conference</a>
+                                            <a class="dropdown-item" href="/hw/publications/JOUR/">Journal</a>
+                                            <a class="dropdown-item" href="/hw/publications/CONF/">Conference</a>
                                         </div>
                                     </li>
                                     <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Boards</a>
                                         <div class="dropdown-menu">
-                                            <a class="dropdown-item" href="/notices/">Notice</a>
-                                            <a class="dropdown-item" href="/awards/">Award</a>
-                                            <a class="dropdown-item" href="/gallery/">Gallery</a>
+                                            <a class="dropdown-item" href="/hw/notices/">Notice</a>
+                                            <a class="dropdown-item" href="/hw/awards/">Award</a>
+                                            <a class="dropdown-item" href="/hw/gallery/">Gallery</a>
                                         </div>
                                     </li>
                                 {% endif %}
@@ -214,7 +214,7 @@
                         <h5>About Us</h5>
                         <ul class="list-unstyled text-small">
                             <li><a class="text-muted" href="/ai/advisors/">Advisor</a></li>
-                            <li><a class="text-muted" href="/ai/member/">People</a></li>
+                            <li><a class="text-muted" href="/ai/members/filter/">People</a></li>
                             <li><a class="text-muted" href="/ai/notices/">Notice</a></li>
                             <li><a class="text-muted" href="/ai/awards/">Award</a></li>
                         </ul>
@@ -230,8 +230,8 @@
                         <ul class="list-unstyled text-small">
                             {% comment %} <li><a class="text-muted" href="/topic">Research Topic</a></li> {% endcomment %}
                             <li><a class="text-muted" href="/ai/projects/">Project</a></li>
-                            <li><a class="text-muted" href="/ai/publication/JOUR">Journal</a></li>
-                            <li><a class="text-muted" href="/ai/publication/CONF">Conference</a></li>                            
+                            <li><a class="text-muted" href="/ai/publications/JOUR/">Journal</a></li>
+                            <li><a class="text-muted" href="/ai/publications/CONF/">Conference</a></li>                            
                         </ul>
         
                     </div>
@@ -240,7 +240,7 @@
                         <h5>About Us</h5>
                         <ul class="list-unstyled text-small">
                             <li><a class="text-muted" href="/hw/advisors/">Advisor</a></li>
-                            <li><a class="text-muted" href="/hw/member/">People</a></li>
+                            <li><a class="text-muted" href="/hw/members/filter/">People</a></li>
                             <li><a class="text-muted" href="/hw/notices/">Notice</a></li>
                             <li><a class="text-muted" href="/hw/awards/">Award</a></li>
                         </ul>
@@ -254,8 +254,8 @@
                         <ul class="list-unstyled text-small">
                             {% comment %} <li><a class="text-muted" href="/topic">Research Topic</a></li> {% endcomment %}
                             <li><a class="text-muted" href="/hw/projects/">Project</a></li>
-                            <li><a class="text-muted" href="/hw/publication/JOUR">Journal</a></li>
-                            <li><a class="text-muted" href="/hw/publication/CONF">Conference</a></li>
+                            <li><a class="text-muted" href="/hw/publications/JOUR/">Journal</a></li>
+                            <li><a class="text-muted" href="/hw/publications/CONF/">Conference</a></li>
                         </ul>
                     </div>
                 {% endif %}
