--- a/labweb/templates/labweb/project/project_detail.html
+++ b/labweb/templates/labweb/project/project_detail.html
@@ -4,6 +4,27 @@
 <link rel="stylesheet" href="/static/css/detail.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+<style>
+    .members {
+        margin-top: 10px;
+        margin-bottom: 20px;
+    }
+    .dateline {
+        min-width: 150px;
+        text-align: right;
+    }
+    .article-tags span {
+        margin-right: 5px;
+    }
+    .link-buttons ul {
+        padding-left: 0;
+        list-style: none;
+    }
+    .link-buttons ul li {
+        display: inline;
+        margin-right: 10px;
+    }
+</style>
 {% endblock %}
 
 {% block content %}
@@ -20,11 +41,16 @@
                         <i class="fa fa-arrow-left"></i> All posts
                     </a>
                     <h1 class="headline" style="font-weight: 700;">{{ project.name }}</h1>
+                    <h6 style="text-align: left;">
+                        {% for area in project.areas.all %}
+                          <span class="badge badge-secondary">{{ area.area_name }}</span>
+                        {% endfor %}
+                    </h6>
                     <div class="row" style="width: auto;">
                         <div class="col-md-10" style="display: flex; justify-content: left; align-items: center;">
                             <p class="article-tags" style="margin-top: 1.5em; display: flex; justify-content: center;">
                                 {% for keyword in keywords %}
-                                <span class="tag rounded-pill me-2 fw-700 bg-white shadow-lg py-2 px-3 small mr-2">{{ keyword }}</span>
+                                    <span class="tag rounded-pill me-2 fw-700 bg-white shadow-lg py-2 px-3 small mr-2">{{ keyword }}</span>
                                 {% endfor %}
                             </p>
                         </div>
@@ -60,26 +86,42 @@
                         </div>
                     </div>
                 </header>
-                <!-- Author & Dates -->
-                <div class="article-meta d-flex justify-content-between mb-6">
+                <!-- Leader, Members & Dates -->
+                <div class="article-meta mb-6">
+                    {% if project.project_lead %}
                     <div id="author" class="center-v" style="display: inline-block;">
-                        <p class="byline fw-700 mb-0">by {{ project.project_lead }}</p>
+                        <p class="byline fw-700 mb-0">Leader: {{ project.project_lead }}</p>
                     </div>
-                    <p class="dateline mb-0 fw-700">{{ project.start_date|date:"Y-m-d" }}</p>
+                    {% endif %}
+                    {% if project.members.all %}
+                    <div class="members">
+                        Members: 
+                        {% for member in project.members.all %}
+                          <span class="badge badge-light">{{ member.name }}</span>
+                        {% endfor %}
+                    </div>
+                    {% endif %}
+                    {% if project.start_date or project.end_date %}
+                    <div class="dateline fw-700">
+                        {% if project.start_date %}{{ project.start_date|date:"Y-m-d" }} ~ {% endif %}
+                        {% if project.end_date %} {{ project.end_date|date:"Y-m-d" }}{% endif %}
+                    </div>
+                    {% endif %}
                 </div>
+                
                 <main>
                     <section class="mb-7">
                         <div class="row">
-                            <div class="col-md-8">
+                            {% if project.description %}
+                            <div class="col-md-12">
                                 <p class="lead mb-0 pb-3 mt-3" style="font-weight: bold;">
                                     Abstract.
                                 </p>
-                            </div>
-                        </div>
-                        <div class="row row-cols-1 text-body">
-                            <div class="col">
                                 <p>{{ project.description }}</p>
                             </div>
+                            {% endif %}
+                        </div>
+                        <div class="row row-cols-1 text-body">
                             <!-- Image Part -->
                             {% for photo in photos %}
                             <div class="col">
