--- a/labweb/templates/labweb/member/ai_member.html
+++ b/labweb/templates/labweb/member/ai_member.html
@@ -12,8 +12,6 @@
   </style>
 {% endblock %}
 {% block content %}
-  
-
   <div class="container py-5">
     <header class="text-center">
       <br><br><br> <br><br><br>
@@ -21,7 +19,7 @@
       <p class="font-italic text-muted mb-0">Let me introduce AI Team members of our lab</p>
       <br><br><br>
       <h3 class="display-7 font-weight-bold">Member</h3>
-    
+    </header>
     <div class="row">
       <div style="padding: 5px;">
         <button type="button" class="btn btn-light degree-button" id="button" onclick="change_btn(event)" >
@@ -29,23 +27,20 @@
             All
           </a> 
         </button>
-        
-      
       </div>
 
-
-      <!-- {% if degrees %}
-      {% for degree in degrees %}
-        <div style="padding: 5px;">
-          <button type="button" class="btn btn-light button"><a href="{% url 'filter_by_degree' %}?degree={{degree}}" style=" color: rgb(83, 83, 83); font-weight:400; text-decoration: none; " > {{degree}}</a></button>
-        </div>
-      
-      {% endfor %}
-      
-      {%endif%} -->
+{#      {% if degrees %}#}
+{#      {% for degree in degrees %}#}
+{#        <div style="padding: 5px;">#}
+{#          <button type="button" class="btn btn-light button"><a href="{% url 'filter_by_degree' %}?degree={{degree}}" style=" color: rgb(83, 83, 83); font-weight:400; text-decoration: none; " > {{degree}}</a></button>#}
+{#        </div>#}
+{##}
+{#      {% endfor %}#}
+{##}
+{#      {%endif%} #}
 
       {% if degree_choices %}
-      {% for degree_abbr, degree_name  in degree_choices %}
+        {% for degree_abbr, degree_name  in degree_choices %}
           <div style="padding: 5px;">
             <button type="button" class="btn btn-light degree-button" id="button" onclick="change_btn(event)">
                 <a href="{% url 'ai_filter_by_degree' %}?degree={{ degree_abbr }}" class="degree-link">
@@ -55,9 +50,8 @@
          </div>
         {% endfor %}
     {% endif %}
-
     </div>
-      <hr/>
+    <hr/>
 
     {% if current_members %}
       <div class="row">
@@ -79,9 +73,17 @@
                   <p class="card-text" style="font-size: 0.9em; text-align: left;">{{member.department}}</p>
                   <hr class="dropdown-divider">
 
-                  <p class="card-text" style="text-align: left;"><i class="fa fa-solid fa-comment"></i>&nbsp&nbsp{{member.motto}}</p>
-                  <p class="card-text" style="font-size: 1em; text-align: left;"><i class="fa fa-solid fa-envelope"></i>&nbsp&nbsp{{member.email}}</p>
-                    
+                  {% if member.motto %}
+                      <p class="card-text" style="font-size: 1em; text-align: left;">
+                        <i class="fa fa-solid fa-comment"></i>  {{ member.motto }}
+                      </p>
+                {% endif %}
+                {% if member.email %}
+                  <p class="card-text" style="font-size: 1em; text-align: left;">
+                    <i class="fa fa-solid fa-envelope"></i>  {{ member.email }}
+                  </p>
+                {% endif %}
+
                 </div>
               </div>
             </div>
@@ -116,19 +118,26 @@
                   <p class="card-text" style="font-size: 0.9em; text-align: left;">{{member.department}}</p>
                   <hr class="dropdown-divider">
 
-                  <p class="card-text" style="text-align: left;"><i class="fa fa-solid fa-comment"></i>&nbsp&nbsp{{member.motto}}</p>
-                  <p class="card-text" style="font-size: 1em; text-align: left;"><i class="fa fa-solid fa-envelope"></i>&nbsp&nbsp{{member.email}}</p>
-                    
+                  {% if member.motto %}
+                      <p class="card-text" style="font-size: 1em; text-align: left;">
+                        <i class="fa fa-solid fa-comment"></i>  {{ member.motto }}
+                      </p>
+                {% endif %}
+                {% if member.email %}
+                  <p class="card-text" style="font-size: 1em; text-align: left;">
+                    <i class="fa fa-solid fa-envelope"></i>  {{ member.email }}
+                  </p>
+                {% endif %}
                 </div>
               </div>
             </div>
         </div>
 
       {% endfor %}
+      </div>
     </div>
     {% endif %}
 
-    </div>
   <script src="https://example.com/fontawesome/v5.15.4/js/all.js" data-auto-a11y="true" ></script>
   <script>
     function change_btn(e){
@@ -145,4 +154,4 @@
 
   </script>
 
-{% endblock %}  
+{% endblock %}
