--- a/labweb/templates/labweb/member/hw_member.html
+++ b/labweb/templates/labweb/member/hw_member.html
@@ -12,59 +12,53 @@
   </style>
 {% endblock %}
 {% block content %}
-  
-
   <div class="container py-5">
     <header class="text-center">
       <br><br><br> <br><br><br>
       <h1 class="display-4 font-weight-bold">People</h1>
-      <p class="font-italic text-muted mb-0">Let me introduce Hardware Team members of our lab</p>
+      <p class="font-italic text-muted mb-0">Let me introduce AI Team members of our lab</p>
       <br><br><br>
       <h3 class="display-7 font-weight-bold">Member</h3>
-    
+    </header>
     <div class="row">
       <div style="padding: 5px;">
         <button type="button" class="btn btn-light degree-button" id="button" onclick="change_btn(event)" >
-          <a href="{% url 'hw_filter_by_degree' %}"  class="degree-link"> 
+          <a href="{% url 'ai_filter_by_degree' %}"  class="degree-link">
             All
-          </a> 
+          </a>
         </button>
-        
-      
       </div>
 
-
-      <!-- {% if degrees %}
-      {% for degree in degrees %}
-        <div style="padding: 5px;">
-          <button type="button" class="btn btn-light button"><a href="{% url 'filter_by_degree' %}?degree={{degree}}" style=" color: rgb(83, 83, 83); font-weight:400; text-decoration: none; " > {{degree}}</a></button>
-        </div>
-      
-      {% endfor %}
-      
-      {%endif%} -->
+{#      {% if degrees %}#}
+{#      {% for degree in degrees %}#}
+{#        <div style="padding: 5px;">#}
+{#          <button type="button" class="btn btn-light button"><a href="{% url 'filter_by_degree' %}?degree={{degree}}" style=" color: rgb(83, 83, 83); font-weight:400; text-decoration: none; " > {{degree}}</a></button>#}
+{#        </div>#}
+{##}
+{#      {% endfor %}#}
+{##}
+{#      {%endif%} #}
 
       {% if degree_choices %}
-      {% for degree_abbr, degree_name  in degree_choices %}
+        {% for degree_abbr, degree_name  in degree_choices %}
           <div style="padding: 5px;">
             <button type="button" class="btn btn-light degree-button" id="button" onclick="change_btn(event)">
-                <a href="{% url 'hw_filter_by_degree' %}?degree={{ degree_abbr }}" class="degree-link">
+                <a href="{% url 'ai_filter_by_degree' %}?degree={{ degree_abbr }}" class="degree-link">
                     {{ degree_name }}
                 </a>
             </button>
          </div>
         {% endfor %}
     {% endif %}
-
     </div>
-      <hr/>
+    <hr/>
 
     {% if current_members %}
       <div class="row">
       {% for member in current_members %}
         <!-- border-style: none; -->
         <!-- Current 멤버 섹션 -->
-          <div class="card mb-2 ml-2 mr-2" style="width:500px; border-style: none; box-shadow: 5px 5px 5px rgb(0, 0, 0, 0.1); "> 
+          <div class="card mb-2 ml-2 mr-2" style="width:500px; border-style: none; box-shadow: 5px 5px 5px rgb(0, 0, 0, 0.1); ">
             <div class="row no-gutters" style="display: flex; align-items: center; justify-content: center; ">
               <div class="col-lg-4">
                 <img class="card-img-top" src="{{member.main_photo.url}}" alt="Card image" style="max-height: 200px; width: 150px; --hover-image: url({{member.hobby_photo.url}})">
@@ -79,29 +73,37 @@
                   <p class="card-text" style="font-size: 0.9em; text-align: left;">{{member.department}}</p>
                   <hr class="dropdown-divider">
 
-                  <p class="card-text" style="text-align: left;"><i class="fa fa-solid fa-comment"></i>&nbsp&nbsp{{member.motto}}</p>
-                  <p class="card-text" style="font-size: 1em; text-align: left;"><i class="fa fa-solid fa-envelope"></i>&nbsp&nbsp{{member.email}}</p>
-                    
+                  {% if member.motto %}
+                      <p class="card-text" style="font-size: 1em; text-align: left;">
+                        <i class="fa fa-solid fa-comment"></i>  {{ member.motto }}
+                      </p>
+                {% endif %}
+                {% if member.email %}
+                  <p class="card-text" style="font-size: 1em; text-align: left;">
+                    <i class="fa fa-solid fa-envelope"></i>  {{ member.email }}
+                  </p>
+                {% endif %}
+
                 </div>
               </div>
             </div>
           </div>
         {% endfor %}
-        <br><br><br>     
+        <br><br><br>
       </div>
       {%endif%}
 
       <!-- Alumni 멤버 섹션 -->
       {% if alumni_members %}
       <br/><br/><br/>
-  
+
       <h3 class="display-7 font-weight-bold" style="padding: 10px;">Alumni</h3>
       <hr/>
       <div class="row">
-        
+
         {% for member in alumni_members %}
 
-          <div class="card mb-3 ml-2 mr-2" style="width:500px; border-style: none; box-shadow: 5px 5px 5px rgb(0, 0, 0, 0.1); "> 
+          <div class="card mb-3 ml-2 mr-2" style="width:500px; border-style: none; box-shadow: 5px 5px 5px rgb(0, 0, 0, 0.1); ">
             <div class="row no-gutters" style="display: flex; align-items: center; justify-content: center; ">
               <div class="col-lg-4">
                 <img class="card-img-top" src="{{member.main_photo.url}}" alt="Card image" style="max-height: 200px; width: 150px; --hover-image: url({{member.hobby_photo.url}})">
@@ -116,19 +118,26 @@
                   <p class="card-text" style="font-size: 0.9em; text-align: left;">{{member.department}}</p>
                   <hr class="dropdown-divider">
 
-                  <p class="card-text" style="text-align: left;"><i class="fa fa-solid fa-comment"></i>&nbsp&nbsp{{member.motto}}</p>
-                  <p class="card-text" style="font-size: 1em; text-align: left;"><i class="fa fa-solid fa-envelope"></i>&nbsp&nbsp{{member.email}}</p>
-                    
+                  {% if member.motto %}
+                      <p class="card-text" style="font-size: 1em; text-align: left;">
+                        <i class="fa fa-solid fa-comment"></i>  {{ member.motto }}
+                      </p>
+                {% endif %}
+                {% if member.email %}
+                  <p class="card-text" style="font-size: 1em; text-align: left;">
+                    <i class="fa fa-solid fa-envelope"></i>  {{ member.email }}
+                  </p>
+                {% endif %}
                 </div>
               </div>
             </div>
         </div>
 
       {% endfor %}
+      </div>
     </div>
     {% endif %}
 
-    </div>
   <script src="https://example.com/fontawesome/v5.15.4/js/all.js" data-auto-a11y="true" ></script>
   <script>
     function change_btn(e){
@@ -145,4 +154,4 @@
 
   </script>
 
-{% endblock %}  
+{% endblock %}
